--- a/index.html
+++ b/index.html
@@ -11,21 +11,50 @@
     <link rel="stylesheet" href="assets/style.css" />
     <title>AD Daily Planner for Enhanced Success</title>
 </head>
+
 <body>
     <header>
         <h1>Daily Planner for Enhanced Success</h1>
-        <p>A planner application to assist you with better time management</p>
+        <p>A planning application to assist you with better time management</p>
+        <p id="today"></p>
     </header>
-
-
-
-
-
-
-
-
-
-
+    <section>
+        <content id="first-7" class="time-block previous" >
+            <aside>7 am</aside>
+            <textarea> </textarea>
+            <button class="saveButton"></button>
+        </content>
+        <content id="first-8" class="time-block current" >
+            <aside>8 am</aside>
+            <textarea> </textarea>
+            <button class="saveButton"></button>
+        </content>
+        <content id="first-9" class="time-block expected" >
+            <aside>9 am</aside>
+            <textarea> </textarea>
+            <button class="saveButton"></button>
+        </content>
+        <content id="first-10" class="time-block expected" >
+            <aside>10 am</aside>
+            <textarea> </textarea>
+            <button class="saveButton"></button>
+        </content>
+        <content id="first-11" class="time-block expected" >
+            <aside>11 am</aside>
+            <textarea> </textarea>
+            <button class="saveButton"></button>
+        </content>
+        <content id="first-12" class="time-block expected" >
+            <aside>12 pm</aside>
+            <textarea> </textarea>
+            <button class="saveButton"></button>
+        </content>
+        <content id="second-1" class="time-block expected" >
+            <aside>1 pm</aside>
+            <textarea> </textarea>
+            <button class="saveButton"></button>
+        </content>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
