dont know how to combine previous un committed add to current adds, explored bootstrap and could the col elements they are proving to be helpful in griding out how the textboxes and buttons will be laid out

--- a/index.html
+++ b/index.html
@@ -16,43 +16,43 @@
     <header>
         <h1>Daily Planner for Enhanced Success</h1>
         <p>A planning application to assist you with better time management</p>
-        <p id="today"></p>
+        <p id="today" class="time"></p>
     </header>
     <section>
-        <content id="first-7" class="time-block previous" >
-            <aside>7 am</aside>
-            <textarea> </textarea>
-            <button class="saveButton"></button>
+        <content id="am7" class="time-block row past">
+            <aside class="col-1 col-md-1 hour">7 am</aside>
+            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <button class="col-1 col-md-1 save input">set</button>
         </content>
-        <content id="first-8" class="time-block current" >
-            <aside>8 am</aside>
-            <textarea> </textarea>
-            <button class="saveButton"></button>
+        <content id="am8" class="time-block row current" >
+            <aside class="col-1 col-md-1 hour">8 am</aside>
+            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <button class="col-1 col-md-1 save input">set</button>
         </content>
-        <content id="first-9" class="time-block expected" >
-            <aside>9 am</aside>
-            <textarea> </textarea>
-            <button class="saveButton"></button>
+        <content id="am9" class="time-block row expected" >
+            <aside class="col-1 col-md-1 hour">9 am</aside>
+            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <button class="col-1 col-md-1 save input">set</button>
         </content>
-        <content id="first-10" class="time-block expected" >
-            <aside>10 am</aside>
-            <textarea> </textarea>
-            <button class="saveButton"></button>
+        <content id="am10" class="time-block row expected" >
+            <aside class="col-1 col-md-1 hour">10 am</aside>
+            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <button class="col-1 col-md-1 save input">set</button>
         </content>
-        <content id="first-11" class="time-block expected" >
-            <aside>11 am</aside>
-            <textarea> </textarea>
-            <button class="saveButton"></button>
+        <content id="am11" class="time-block row expected" >
+            <aside class="col-1 col-md-1 hour">11 am</aside>
+            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <button class="col-1 col-md-1 save input">set</button>
         </content>
-        <content id="first-12" class="time-block expected" >
-            <aside>12 pm</aside>
-            <textarea> </textarea>
-            <button class="saveButton"></button>
+        <content id="pm12" class="time-block row expected" >
+            <aside class="col-1 col-md-1 hour">12 pm</aside>
+            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <button class="col-1 col-md-1 save input">set</button>
         </content>
-        <content id="second-1" class="time-block expected" >
-            <aside>1 pm</aside>
-            <textarea> </textarea>
-            <button class="saveButton"></button>
+        <content id="pm1" class="time-block rowexpected" >
+            <aside class="col-1 col-md-1 hour">1 pm</aside>
+            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <button class="col-1 col-md-1 save input">set</button>
         </content>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
