added color now need to find a way to have it set on the time of the day, also discovered that my col-md measurements needed to be 10 to fill the page, anything less would show that color on the other side and anything more would push the button off the page

--- a/index.html
+++ b/index.html
@@ -21,37 +21,37 @@
     <section>
         <content id="am7" class="time-block row past">
             <aside class="col-1 col-md-1 hour">7 am</aside>
-            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <textarea class="col-1 col-md-10 input" rows="2"> </textarea>
             <button class="col-1 col-md-1 save input">set</button>
         </content>
         <content id="am8" class="time-block row current" >
             <aside class="col-1 col-md-1 hour">8 am</aside>
-            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <textarea class="col-1 col-md-10 input" rows="2"> </textarea>
             <button class="col-1 col-md-1 save input">set</button>
         </content>
         <content id="am9" class="time-block row expected" >
             <aside class="col-1 col-md-1 hour">9 am</aside>
-            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <textarea class="col-1 col-md-10 input" rows="2"> </textarea>
             <button class="col-1 col-md-1 save input">set</button>
         </content>
         <content id="am10" class="time-block row expected" >
             <aside class="col-1 col-md-1 hour">10 am</aside>
-            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <textarea class="col-1 col-md-10 input" rows="2"> </textarea>
             <button class="col-1 col-md-1 save input">set</button>
         </content>
         <content id="am11" class="time-block row expected" >
             <aside class="col-1 col-md-1 hour">11 am</aside>
-            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <textarea class="col-1 col-md-10 input" rows="2"> </textarea>
             <button class="col-1 col-md-1 save input">set</button>
         </content>
         <content id="pm12" class="time-block row expected" >
             <aside class="col-1 col-md-1 hour">12 pm</aside>
-            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <textarea class="col-1 col-md-10 input" rows="2"> </textarea>
             <button class="col-1 col-md-1 save input">set</button>
         </content>
-        <content id="pm1" class="time-block rowexpected" >
+        <content id="pm1" class="time-block row expected" >
             <aside class="col-1 col-md-1 hour">1 pm</aside>
-            <textarea class="col-1 col-md-9 inputs" rows="2"> </textarea>
+            <textarea class="col-1 col-md-10 input" rows="2"> </textarea>
             <button class="col-1 col-md-1 save input">set</button>
         </content>
     </section>
